kubernetes/apps/default/misc-ingress/app/ingress-internal-ombi.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: ombi.png
    gethomepage.dev/name: Ombi
    gethomepage.dev/group: Media
    gethomepage.dev/description: Ombi Media Request System
    gethomepage.dev/widget.type: ombi
    gethomepage.dev/widget.url: http://${SECRET_UNRAID_IP}:3579
    gethomepage.dev/widget.key: ${HOMEPAGE_OMBI_KEY}
spec:
  ingressClassName: internal
  rules:
    - host: &host "ombi.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi
                port:
                  number: 3579
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ombi
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 3579
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  ports:
    - name: http
      port: 3579
  type: ClusterIP
